# mobile_overdraft_credit_risk

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
infra/: AWS_DEPLOYMENT.md
models/: calibrator.pkl  fairness_report.json  metrics.json  model.txt  sample_reason_codes.json  validation_report.json
notebooks/: 01_EDA_and_project_overview.ipynb
src/api/: lambda_handler.py  main.py
src/features/: build_features.py
src/models/: train.py
src/monitoring/: drift.py
src/validation/: __init__.py  cost_threshold.py  data_validator.py  model_validator.py  schemas.py
tests/: conftest.py
tests/unit/: test_pipeline.py  test_validation.py
